apps/whoogle/service.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "whoogle"
spec:
  ports:
    - port: 80
      targetPort: "whoogle"
  selector:
    app.kubernetes.io/name: "whoogle"
